--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ css: ['pages/index.css']
 comments: false
 ---
 
-<section class="banner">
+<!-- <section class="banner">
     <div class="collection-head geopattern">
         <div class="container">
             <div class="collection-title">
@@ -27,7 +27,7 @@ comments: false
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- /.banner -->
 <section class="container content">
     <div class="columns">
